[MIN] IntelliJ cleanups